# cloudops-bootstrap

./: .gitignore  BOOTSTRAP_COMPLETION.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  CUSTOMER_CUSTOMIZATION_GUIDE.md  Conf-Federal-Credentials.sh  FINOPS_CONCEPT.md  FINOPS_PRODUCTION_GUIDE.md  INDEX.md  LICENSE  Makefile  PoC.md  README.md  project-pro.md
.github/workflows/: DESTROY_WORKFLOW_GUIDE.md  azure_infra_depl.yml  deploy-terraform-infra-for-test.yml  java-apps-deploy.yml  python-apps-deploy.yml  terraform-deploy.yml  terraform-destroy.yml  terraform-test.yml  (+1 more)
.history/: README_20250324143241.md
.taskmaster/: state.json
IaC/: .gitignore  DEPRECATIONS.md  IMPORT_RESOURCES.md  PROJECT_NAMING_GUIDE.md  README.md  STATE_MANAGEMENT_SOLUTION.md  TERRAFORM_FIXES.md  locals.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infra/: main.tf  outputs.tf  variables.tf
java-app/: .gitignore  Dockerfile  README.md  pom.xml
python-app/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python-app/app/: __init__.py  config.py  main.py
python-app/app/models/: schemas.py
python-app/app/routes/: api.py  health.py
python-app/app/services/: item_service.py  user_service.py
python-app/app/tests/: conftest.py  test_health.py  test_item_service.py  test_user_service.py
scripts/: install-devops-tools.sh  verify-tools.sh
terraform/: .terraform.lock.hcl  README.md  backend.tf  docker.tf  locals.tf  main.tf  outputs.tf  providers.tf  resource_group.tf  variables.tf
(+60 files in other folders)
